# pulsecraft-change-intelligence

./: CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/agents/: pushpilot.md  signalscribe.md
config/: README.md  bu_profiles.yaml  bu_registry.yaml  channel_policy.yaml  policy.yaml
design/: 00-problem-statement.md  README.md
design/adr/: ADR-001-workflow-with-subagents.md
design/dryrun/: 2026-04-23-dryrun-report.md
design/planning/: 00-planning-index.md  01-decision-criteria.md
fixtures/changes/: README.md  change_001_clearcut_communicate.json  change_002_pure_internal_refactor.json  change_003_ambiguous_escalate.json  change_004_early_flag_hold_until.json  change_005_muddled_need_clarification.json  change_006_multi_bu_affected_vs_adjacent.json  change_007_mlr_sensitive.json  change_008_post_hoc_already_shipped.json
prompts/: 00-repo-scaffold.md  01-commit-planning-docs.md  02-schemas.md  03-config-fixtures.md  03.5-session-continuity.md  05-agent-signalscribe.md  06-agent-buatlas.md  08-skills-ingest.md  09-skills-registry-policy.md  11.5-explain-scoping-fix.md  14.5-readme-overhaul.md  15.5.3-prefilter-fix.md  16-architecture-tab.md  16.1.1-replay-button-fix.md  16.1.2-truncation-fix.md  16.2-architecture-gif.md  16.3-video-embed.md  build-plan.md
schemas/: README.md  audit_record.schema.json  bu_profile.schema.json  change_artifact.schema.json  change_brief.schema.json  decision.schema.json  delivery_plan.schema.json  personalized_brief.schema.json
scripts/: eval_pushpilot.py  eval_signalscribe.py
scripts/eval/: run_all.py  run_buatlas.py  run_pushpilot.py  run_signalscribe.py
src/pulsecraft/: __init__.py
src/pulsecraft/agents/: __init__.py  pushpilot.py  signalscribe.py
templates/: email.html.j2  email.txt.j2  portal_digest.md.j2  push.j2  teams_card.j2
tests/demo/: test_server_routes.py
tests/eval/: test_agent_evals.py
tests/integration/: conftest.py
(+103 files in other folders)
